fixed button highlight overflowing out of the dropdown menu

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -124,7 +124,6 @@ footer {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.25);
   z-index: 1;
-  width: 25vw;
 
 }
 
